Added number add/edit from phone contacts, Introduced alerts for necessary places, Added Help Me options when sending SMS, Fixed TextField hide issue when keyboard pops up

--- a/PCSA/PCSA/Base.lproj/Main.storyboard
+++ b/PCSA/PCSA/Base.lproj/Main.storyboard
@@ -153,23 +153,27 @@
                                 <rect key="frame" x="96" y="376" width="48" height="48"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dkh-h2-MEV">
-                                <rect key="frame" x="276" y="376" width="48" height="48"/>
+                                <rect key="frame" x="272" y="372" width="56" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="56" id="T7G-fX-w3O"/>
+                                    <constraint firstAttribute="height" constant="56" id="xfh-ft-0Y3"/>
+                                </constraints>
                                 <state key="normal" image="HelpMeButton"/>
                                 <connections>
                                     <action selector="helpMe:" destination="f8H-9t-caz" eventType="touchUpInside" id="JDZ-0H-1ZL"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TrusteeDefault" translatesAutoresizingMaskIntoConstraints="NO" id="0Pq-KX-dVA">
-                                <rect key="frame" x="366" y="282" width="48" height="48"/>
+                                <rect key="frame" x="366" y="278" width="48" height="48"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TrusteeDefault" translatesAutoresizingMaskIntoConstraints="NO" id="Jxu-D9-Ntg">
-                                <rect key="frame" x="366" y="461" width="48" height="48"/>
+                                <rect key="frame" x="366" y="465" width="48" height="48"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TrusteeDefault" translatesAutoresizingMaskIntoConstraints="NO" id="zSg-k0-2Eb">
-                                <rect key="frame" x="186" y="461" width="48" height="48"/>
+                                <rect key="frame" x="186" y="465" width="48" height="48"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TrusteeDefault" translatesAutoresizingMaskIntoConstraints="NO" id="tql-N3-5gP">
-                                <rect key="frame" x="186" y="282" width="48" height="48"/>
+                                <rect key="frame" x="186" y="278" width="48" height="48"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.18823529410000001" green="0.90588235289999997" blue="0.69019607839999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -261,25 +265,99 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yh2-sp-l38">
+                                        <rect key="frame" x="558" y="25" width="22" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="22" id="9r1-a5-TeS"/>
+                                            <constraint firstAttribute="height" constant="30" id="Ehz-Mn-Tbe"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                        <state key="normal" image="PickContactButton"/>
+                                        <connections>
+                                            <action selector="selectContact1:" destination="b4D-Ph-Znz" eventType="touchUpInside" id="eez-O6-5iy"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1lv-yh-TEq">
+                                        <rect key="frame" x="558" y="80" width="22" height="30"/>
+                                        <inset key="imageEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                        <state key="normal" image="PickContactButton"/>
+                                        <connections>
+                                            <action selector="selectContact2:" destination="b4D-Ph-Znz" eventType="touchUpInside" id="vtt-cq-nFV"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvG-qL-ac8">
+                                        <rect key="frame" x="558" y="135" width="22" height="30"/>
+                                        <inset key="imageEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                        <state key="normal" image="PickContactButton"/>
+                                        <connections>
+                                            <action selector="selectContact3:" destination="b4D-Ph-Znz" eventType="touchUpInside" id="LYa-7o-hPN"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="es6-rO-Uq9">
+                                        <rect key="frame" x="558" y="190" width="22" height="30"/>
+                                        <inset key="imageEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                        <state key="normal" image="PickContactButton"/>
+                                        <connections>
+                                            <action selector="selectContact4:" destination="b4D-Ph-Znz" eventType="touchUpInside" id="FUX-Bt-Nl2"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0a-a2-OBT">
+                                        <rect key="frame" x="558" y="245" width="22" height="30"/>
+                                        <inset key="imageEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                        <state key="normal" image="PickContactButton"/>
+                                        <connections>
+                                            <action selector="selectContact5:" destination="b4D-Ph-Znz" eventType="touchUpInside" id="vMQ-UD-sxD"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="znj-OF-RVW">
+                                        <rect key="frame" x="558" y="300" width="22" height="30"/>
+                                        <inset key="imageEdgeInsets" minX="1" minY="1" maxX="1" maxY="1"/>
+                                        <state key="normal" image="PickContactButton"/>
+                                        <connections>
+                                            <action selector="selectContact6:" destination="b4D-Ph-Znz" eventType="touchUpInside" id="SMU-LB-zQS"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="1lv-yh-TEq" firstAttribute="height" secondItem="Yh2-sp-l38" secondAttribute="height" id="14w-Ho-2yO"/>
+                                    <constraint firstItem="e0a-a2-OBT" firstAttribute="centerY" secondItem="OxI-dV-PTb" secondAttribute="centerY" id="1Cj-Qe-V5Q"/>
+                                    <constraint firstItem="1lv-yh-TEq" firstAttribute="centerY" secondItem="TGv-jG-adx" secondAttribute="centerY" id="1mo-pz-Zhu"/>
                                     <constraint firstItem="TGv-jG-adx" firstAttribute="leading" secondItem="X8o-yd-mpY" secondAttribute="leading" id="3r1-dJ-Tre"/>
+                                    <constraint firstItem="znj-OF-RVW" firstAttribute="centerY" secondItem="U9y-Em-FfG" secondAttribute="centerY" id="5lG-xp-p7g"/>
                                     <constraint firstItem="8GL-ss-51d" firstAttribute="top" secondItem="X8o-yd-mpY" secondAttribute="bottom" constant="25" id="6UG-6n-Ayf"/>
+                                    <constraint firstItem="QvG-qL-ac8" firstAttribute="centerY" secondItem="X8o-yd-mpY" secondAttribute="centerY" id="6hr-VR-yTM"/>
+                                    <constraint firstItem="QvG-qL-ac8" firstAttribute="trailing" secondItem="X8o-yd-mpY" secondAttribute="trailing" id="93i-eX-Jdu"/>
+                                    <constraint firstItem="Yh2-sp-l38" firstAttribute="trailing" secondItem="s34-tE-l6d" secondAttribute="trailing" id="AYB-2w-3WQ"/>
+                                    <constraint firstItem="znj-OF-RVW" firstAttribute="height" secondItem="Yh2-sp-l38" secondAttribute="height" id="BN8-wG-iKB"/>
+                                    <constraint firstItem="znj-OF-RVW" firstAttribute="width" secondItem="Yh2-sp-l38" secondAttribute="width" id="Ix5-er-KiV"/>
                                     <constraint firstAttribute="bottom" secondItem="U9y-Em-FfG" secondAttribute="bottom" constant="44" id="KOw-ER-sXy"/>
+                                    <constraint firstItem="1lv-yh-TEq" firstAttribute="trailing" secondItem="TGv-jG-adx" secondAttribute="trailing" id="KlT-yh-bpm"/>
                                     <constraint firstItem="X8o-yd-mpY" firstAttribute="leading" secondItem="8GL-ss-51d" secondAttribute="leading" id="Me3-b6-F8L"/>
+                                    <constraint firstItem="es6-rO-Uq9" firstAttribute="centerY" secondItem="8GL-ss-51d" secondAttribute="centerY" id="NLA-OO-NWw"/>
                                     <constraint firstItem="U9y-Em-FfG" firstAttribute="top" secondItem="OxI-dV-PTb" secondAttribute="bottom" constant="25" id="R4Z-mY-EaH"/>
                                     <constraint firstItem="OxI-dV-PTb" firstAttribute="leading" secondItem="U9y-Em-FfG" secondAttribute="leading" id="SiA-YL-52z"/>
+                                    <constraint firstItem="es6-rO-Uq9" firstAttribute="trailing" secondItem="8GL-ss-51d" secondAttribute="trailing" id="UYu-0D-NNm"/>
                                     <constraint firstItem="8GL-ss-51d" firstAttribute="trailing" secondItem="OxI-dV-PTb" secondAttribute="trailing" id="Ueg-2H-7DL"/>
-                                    <constraint firstAttribute="trailing" secondItem="s34-tE-l6d" secondAttribute="trailing" constant="20" id="ZCd-c7-25r"/>
+                                    <constraint firstItem="es6-rO-Uq9" firstAttribute="height" secondItem="Yh2-sp-l38" secondAttribute="height" id="VQf-WA-pNu"/>
+                                    <constraint firstItem="es6-rO-Uq9" firstAttribute="width" secondItem="Yh2-sp-l38" secondAttribute="width" id="VQz-Zf-Zt8"/>
+                                    <constraint firstItem="Yh2-sp-l38" firstAttribute="centerY" secondItem="s34-tE-l6d" secondAttribute="centerY" id="WNi-Vv-J8Z"/>
+                                    <constraint firstItem="QvG-qL-ac8" firstAttribute="width" secondItem="Yh2-sp-l38" secondAttribute="width" id="Wiu-jn-rRn"/>
+                                    <constraint firstItem="znj-OF-RVW" firstAttribute="trailing" secondItem="U9y-Em-FfG" secondAttribute="trailing" id="Yet-f9-kUc"/>
+                                    <constraint firstItem="e0a-a2-OBT" firstAttribute="trailing" secondItem="OxI-dV-PTb" secondAttribute="trailing" id="Z8f-ku-6S1"/>
                                     <constraint firstItem="TGv-jG-adx" firstAttribute="trailing" secondItem="X8o-yd-mpY" secondAttribute="trailing" id="a3j-Xs-aif"/>
                                     <constraint firstItem="s34-tE-l6d" firstAttribute="top" secondItem="Xye-4h-XH5" secondAttribute="top" constant="25" id="cxA-gN-j42"/>
                                     <constraint firstItem="s34-tE-l6d" firstAttribute="leading" secondItem="TGv-jG-adx" secondAttribute="leading" id="dB3-YH-nre"/>
                                     <constraint firstItem="X8o-yd-mpY" firstAttribute="top" secondItem="TGv-jG-adx" secondAttribute="bottom" constant="25" id="dsX-eJ-RRJ"/>
+                                    <constraint firstItem="QvG-qL-ac8" firstAttribute="height" secondItem="Yh2-sp-l38" secondAttribute="height" id="fGj-fU-5u5"/>
                                     <constraint firstItem="8GL-ss-51d" firstAttribute="leading" secondItem="OxI-dV-PTb" secondAttribute="leading" id="gVi-xk-W6e"/>
+                                    <constraint firstItem="e0a-a2-OBT" firstAttribute="height" secondItem="Yh2-sp-l38" secondAttribute="height" id="hD3-4d-Cer"/>
+                                    <constraint firstAttribute="trailing" secondItem="s34-tE-l6d" secondAttribute="trailing" constant="20" id="k5P-B9-SNg"/>
                                     <constraint firstItem="s34-tE-l6d" firstAttribute="leading" secondItem="Xye-4h-XH5" secondAttribute="leading" constant="20" id="ljN-MX-OSU"/>
                                     <constraint firstItem="OxI-dV-PTb" firstAttribute="trailing" secondItem="U9y-Em-FfG" secondAttribute="trailing" id="mXc-QM-BtT"/>
                                     <constraint firstItem="TGv-jG-adx" firstAttribute="top" secondItem="s34-tE-l6d" secondAttribute="bottom" constant="25" id="nlp-Eg-lTr"/>
                                     <constraint firstItem="s34-tE-l6d" firstAttribute="trailing" secondItem="TGv-jG-adx" secondAttribute="trailing" id="pg0-gj-2gD"/>
+                                    <constraint firstItem="1lv-yh-TEq" firstAttribute="width" secondItem="Yh2-sp-l38" secondAttribute="width" id="rKx-oj-q8m"/>
+                                    <constraint firstItem="e0a-a2-OBT" firstAttribute="width" secondItem="Yh2-sp-l38" secondAttribute="width" id="t7O-eY-Ry0"/>
                                     <constraint firstItem="OxI-dV-PTb" firstAttribute="top" secondItem="8GL-ss-51d" secondAttribute="bottom" constant="25" id="tWs-O1-FM9"/>
                                     <constraint firstItem="X8o-yd-mpY" firstAttribute="trailing" secondItem="8GL-ss-51d" secondAttribute="trailing" id="uJF-mo-d2s"/>
                                     <constraint firstItem="s34-tE-l6d" firstAttribute="centerX" secondItem="Xye-4h-XH5" secondAttribute="centerX" id="xlA-hk-dLg"/>
@@ -288,7 +366,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.18823529410000001" green="0.90588235289999997" blue="0.69019607839999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Xye-4h-XH5" secondAttribute="trailing" id="8QF-DL-l5K"/>
+                            <constraint firstItem="Xye-4h-XH5" firstAttribute="trailing" secondItem="dgC-mY-PWP" secondAttribute="trailing" id="8QF-DL-l5K"/>
                             <constraint firstItem="Xye-4h-XH5" firstAttribute="leading" secondItem="dgC-mY-PWP" secondAttribute="leading" id="L0R-Tg-fGb"/>
                             <constraint firstItem="Xye-4h-XH5" firstAttribute="top" secondItem="62h-a6-KBu" secondAttribute="bottom" constant="10" id="LE9-T7-l1d"/>
                             <constraint firstItem="vU1-pg-kBg" firstAttribute="top" secondItem="Xye-4h-XH5" secondAttribute="bottom" constant="10" id="aJk-At-pLz"/>
@@ -303,6 +381,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="scrollView" destination="Xye-4h-XH5" id="uRs-bG-BJb"/>
                         <outlet property="textFieldNumber1" destination="s34-tE-l6d" id="gml-ms-NXR"/>
                         <outlet property="textFieldNumber2" destination="TGv-jG-adx" id="dK4-WH-Mfk"/>
                         <outlet property="textFieldNumber3" destination="X8o-yd-mpY" id="cwt-Eq-1hm"/>
@@ -478,6 +557,7 @@
         <image name="HelpMeButton" width="48" height="48"/>
         <image name="Logo" width="292" height="292"/>
         <image name="MenuButton" width="22" height="22"/>
+        <image name="PickContactButton" width="59" height="79"/>
         <image name="TrusteeDefault" width="48" height="48"/>
     </resources>
 </document>
