--- a/PCSA/PCSA/Base.lproj/LaunchScreen.storyboard
+++ b/PCSA/PCSA/Base.lproj/LaunchScreen.storyboard
@@ -20,7 +20,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="AF3-kK-uQu">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoWithTitle" translatesAutoresizingMaskIntoConstraints="NO" id="AF3-kK-uQu">
                                 <rect key="frame" x="150" y="150" width="300" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="AF3-kK-uQu" secondAttribute="height" multiplier="1:1" id="O6i-GB-cb7"/>
@@ -49,6 +49,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="292" height="292"/>
+        <image name="LogoWithTitle" width="251" height="251"/>
     </resources>
 </document>
